# zeroclaw-coordinator-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  Dockerfile  README.md  config.yaml  lint.sh  run.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  toml_utils.rs
