[package]
name = "zeroclaw-coordinator-mcp"
version = "0.1.4"
edition = "2024"
description = "High-performance MCP server for ZeroClaw coordination in Home Assistant."
license = "MIT"
repository = "https://github.com/paul-crafts/zeroclaw-coordinator-mcp"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.25"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.10"
